src/objects/Proposed_Products__c.object
<CustomObject>
    <fields>
        <fullName>Medical_Product_Option__c</fullName>
        <label>Medical Product Option</label>
        <picklist>
            <controllingField>Medical_Product_Name__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Benefit_Request_Form__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Pocket_Max__c</fullName>
        <label>Out of Pocket Max</label>
        <picklist>
            <picklistValues>
                <fullName>Stacked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Stacked</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareFirst Private exchange</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <picklist>
            <controllingField>Product_Line__c</controllingField>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Option__c</fullName>
        <label>Product Option</label>
        <picklist>
            <controllingField>Product_Name__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RXIntegration__c</fullName>
        <formula>TEXT(   Related_Medical_Product__r.Integrated_Non_Integrated__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RX Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Medical_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Medical Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Proposed_Products__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Medical</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Proposed_Products__c</referenceTo>
        <relationshipLabel>Proposed Products</relationshipLabel>
        <relationshipName>Proposed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Network__c</fullName>
        <label>Standard Network</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_network1__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Standard_Network__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type &quot;ASO&quot;</inlineHelpText>
        <label>Standard network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiers__c</fullName>
        <formula>TEXT( Benefit_Request_Form__r.Tiers__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can have value only if BRF is of type &quot;ASO&quot;</inlineHelpText>
        <label>Tiers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Name__c</fullName>
        <label>Vision Product Name</label>
        <picklist>
            <picklistValues>
                <fullName>BlueVision Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueVision Plus (Medigap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Vision (Core)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Blue Vision Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Options__c</fullName>
        <inlineHelpText>This field values depends on Vision Product Name field</inlineHelpText>
        <label>Vision Product Options</label>
        <picklist>
            <controllingField>Vision_Product_Name__c</controllingField>
            <picklistValues>
                <fullName>Option 1 - Core to HealthyBlue HMO, BlueChoice HMO Open Access, BlueChoice Opt-Out Plus Open Access, BlueChoice HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2 - Core to HealthyBlue 2.0, HealthyBlue Advantage, and BlueChoice Opt-out Open Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 3 - Core to HealthyBlue PPO, BluePreferred, BlueChoice Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option A - $0 exam copay/12/12/24 month benefit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option B - $10 exam copay/12/12/24 month benefit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option C - $0 exam copay/12 month benefit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option D - $10 exam copay/12 month benefit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 1 - $0 exam copay/12 month benefit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2 - $0 exam copay/24 month benefit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 3 - $10 exam copay/12 month benefit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 4 - $10 exam copay/24 month benefit period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wellness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wellness</label>
        <type>Checkbox</type>
    </fields>
    <label>Proposed Products</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Proposed Products Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Products</pluralLabel>
    <recordTypes>
        <fullName>CareFirst_Private_Exchange</fullName>
        <active>true</active>
        <description>CareFirst Private Exchange Layout</description>
        <label>CareFirst Private Exchange</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dental</fullName>
        <active>true</active>
        <description>Dental Layout</description>
        <label>Dental</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drug</fullName>
        <active>true</active>
        <description>Drug Layout</description>
        <label>Drug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical</fullName>
        <active>true</active>
        <description>Medical Layout</description>
        <label>Medical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vision</fullName>
        <active>true</active>
        <description>Vision Layout</description>
        <label>Vision</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EPP001</fullName>
        <active>true</active>
        <description>Funding Arrangement must be &quot;Risk&quot; if Benfit Request form is of type &quot;Risk&quot;</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; IF( TEXT(PRIORVALUE(Funding_Arrangement__c))=&apos;Risk&apos;  &amp;&amp; ISCHANGED( Funding_Arrangement__c ),true,false)</errorConditionFormula>
        <errorDisplayField>Funding_Arrangement__c</errorDisplayField>
        <errorMessage>EPP001 : If the Benefit Request Form funding arrangement is &quot;RISK&quot; then the product funding arrangement should also be &quot;RISK&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP009</fullName>
        <active>true</active>
        <description>For Funding Arrangements on Benefit Request Form values are &quot;&apos;Both&quot; or &quot;Other&quot; then Funding Arrangements on Proposed Products should have value</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; IF( (TEXT(Benefit_Request_Form__r.Funding_Arrangements__c) = &apos;Other&apos; || TEXT(Benefit_Request_Form__r.Funding_Arrangements__c) = &apos;Both&apos;) &amp;&amp; TEXT(Funding_Arrangement__c) = &apos;&apos;, true,false  )</errorConditionFormula>
        <errorDisplayField>Funding_Arrangement__c</errorDisplayField>
        <errorMessage>EPP009 : If Funding Arrangements on Benefit Request Form values are &quot;Both&quot; or &quot;Other&quot; then Funding Arrangements on Proposed Products cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP010</fullName>
        <active>true</active>
        <description>Funding Arrangement must be &quot;ASO&quot; if Benfit Request form is of type &quot;ASO&quot;</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; IF( TEXT(PRIORVALUE(Funding_Arrangement__c))=&apos;ASO&apos;  &amp;&amp; ISCHANGED( Funding_Arrangement__c ),true,false)</errorConditionFormula>
        <errorDisplayField>Funding_Arrangement__c</errorDisplayField>
        <errorMessage>EPP010 : If the Benefit Request Form funding arrangement is &quot;ASO&quot; then the product funding arrangement should also be &quot;ASO&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP0102</fullName>
        <active>true</active>
        <description>Option 2: $8/$15/$30 w/ $0 deductible is only valid when Jurisdiction = &quot;MD&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;HealthyBlue 2.0/HealthyBlue 2.0 HRA (Non-integrated Deductible)&apos;) &amp;&amp; (TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;DC&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;VA&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;  ) &amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 2: $8/$15/$30 w/ $0 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP102 : Option 2: $8/$15/$30 w/ $0 deductible is available only for Jurisdiction &apos;MD&apos; on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP011</fullName>
        <active>true</active>
        <description>For the Benefit Request form as Grandfathered status &quot;Mixed&quot; then Grandfathered status on Proposed Products should have a value</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp;(RecordType.DeveloperName = &apos;Medical&apos; &amp;&amp; IF( 
 AND( ISPICKVAL(Benefit_Request_Form__r.Grandfathered_Status__c, &quot;Mixed&quot;), 
 ISBLANK( TEXT( Grandfathered_Status__c ) )), True, False ))</errorConditionFormula>
        <errorDisplayField>Grandfathered_Status__c</errorDisplayField>
        <errorMessage>EPP011 : If the Benefit Request form as Grandfathered status &quot;Mixed&quot; then Grandfathered status on Proposed Products cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP012</fullName>
        <active>true</active>
        <description>For the Proposed Product of type Grandfathered then status cannot be changed</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(RecordType.DeveloperName = &apos;Medical&apos; &amp;&amp; IF( TEXT(PRIORVALUE( Grandfathered_Status__c ))=&apos;Grandfathered&apos; &amp;&amp; ISCHANGED(  Grandfathered_Status__c  ),true,false))</errorConditionFormula>
        <errorDisplayField>Grandfathered_Status__c</errorDisplayField>
        <errorMessage>EPPF012 : If the Grandfathered status for ProposedProducts is Grandfathered then it cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP013</fullName>
        <active>true</active>
        <description>For the Proposed Product of type Non-Grandfathered then status cannot be changed</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(RecordType.DeveloperName = &apos;Medical&apos; &amp;&amp; IF( TEXT(PRIORVALUE( Grandfathered_Status__c ))=&apos;Non-Grandfathered&apos; &amp;&amp; ISCHANGED(  Grandfathered_Status__c  ),true,false))</errorConditionFormula>
        <errorDisplayField>Grandfathered_Status__c</errorDisplayField>
        <errorMessage>EPP013 : If the Grandfathered status for ProposedProducts is Non-Grandfathered then it cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP014</fullName>
        <active>false</active>
        <description>Enrollment type cannot be blank</description>
        <errorConditionFormula>IF(  Benefit_Request_Form__r.Count_of_Medical_Proposed_Products__c  &gt;=1 &amp;&amp;  Benefit_Request_Form__r.Count_of_Proposed_Products_Non_Medical1__c  &gt;=1 &amp;&amp; ISBLANK(TEXT(  Benefit_Request_Form__r.Enrollment_Type__c )),true,IF(Benefit_Request_Form__r.Count_of_Proposed_Products__c  &gt;=1 || Benefit_Request_Form__r.Count_of_Proposed_Products_Non_Medical1__c  &gt;=1,false,NULL))</errorConditionFormula>
        <errorMessage>EPP014 : If Benefit Request Form has more than 1 Medical with Ancillary, then Enrollment Type on Benefit Request Form cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP015</fullName>
        <active>true</active>
        <description>For the Benefit Request form as Grandfathered PPACA status &quot;Mixed&quot; then Grandfathered PPACA status on Proposed Products should have a value</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(RecordType.DeveloperName = &apos;Medical&apos; &amp;&amp; IF( 
 AND( ISPICKVAL( Benefit_Request_Form__r.Grandfathered_PPACA_Status__c , &quot;Mixed&quot;), 
 ISBLANK( TEXT(  Grandfathered_PPACA_Status__c  ) )), True, False ))</errorConditionFormula>
        <errorDisplayField>Grandfathered_PPACA_Status__c</errorDisplayField>
        <errorMessage>EPP015 : If the Benefit Request form as Grandfathered PPACA status &quot;Mixed&quot; then Grandfathered PPACA status on Proposed Products cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP016</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Benefit_Request_Form__r.MHP_Required__c == &apos;Yes&apos;,  ISPICKVAL(MHP_Test_Result__c, &apos;Fail&apos;) , ISBLANK( MHP_Test_Comments__c ) )</errorConditionFormula>
        <errorDisplayField>MHP_Test_Comments__c</errorDisplayField>
        <errorMessage>EPP016: MHP Test Comments is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP017</fullName>
        <active>true</active>
        <description>Blue Rewards field should have value if the funding arrangements is of type ASO</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; IF(RecordType.Name = &apos;CareFirst Private Exchange&apos; || RecordType.Name = &apos;Medical&apos;,IF(ISPICKVAL( Benefit_Request_Form__r.Funding_Arrangements__c, &apos;ASO&apos;),ISPICKVAL(Blue_Rewards__c,&apos;&apos;),false),false)</errorConditionFormula>
        <errorDisplayField>Blue_Rewards__c</errorDisplayField>
        <errorMessage>EPP017 : If Funding Arrangements ob BRF is &quot;ASO&quot; then Blue Rewards field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP020</fullName>
        <active>true</active>
        <description>Enrollment type cannot be blank if there are minimum one medical and non-medical products</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp;(IF(Benefit_Request_Form__r.Count_of_Medical_Proposed_Products__c  &gt;0,IF(Text(Product_Category__c) != &apos;Medical&apos;,IF(ISBLANK(TEXT(Benefit_Request_Form__r.Enrollment_Type__c )),true,false),false),IF(Benefit_Request_Form__r.Count_of_Proposed_Products_Non_Medical1__c &gt; 0,IF(Text(Product_Category__c) == &apos;Medical&apos;,IF(ISBLANK(TEXT(Benefit_Request_Form__r.Enrollment_Type__c )),true,false),false),false)))</errorConditionFormula>
        <errorMessage>EPP020 : If Benefit Request Form has more than 1 Medical with Ancillary, then Enrollment Type on Benefit Request Form cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP021</fullName>
        <active>true</active>
        <errorConditionFormula>Benefit_Request_Form__r.Submit_to_Underwriting__c</errorConditionFormula>
        <errorMessage>EPP020: You cannot Add/Edit the Proposed Products after the related BRF is submitted to Underwriting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP022</fullName>
        <active>true</active>
        <errorConditionFormula>Benefit_Request_Form__r.Submit_to_ARC_Approval__c</errorConditionFormula>
        <errorMessage>EPP022: You cannot edit a Proposed Product when an ARC Approval Required BRF has been submitted for ARC approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP024</fullName>
        <active>true</active>
        <description>&quot;PC-5&quot;, &quot;PC-10&quot;, &quot;PC-20&quot; are only applicable when Jurisdiction (BRF) = &quot;DC&quot; or &quot;VA&quot;</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Dental&apos; &amp;&amp; (OR(TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;MD&apos;,TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;)&amp;&amp; OR(TEXT( Dental_Product_Options__c )= &apos;PC-5 POS- basic dental services $5 per office visit with option to go OON&apos;,TEXT( Dental_Product_Options__c )= &apos;PC-10 POS - basic dental services $10 per office visit with option to go OON&apos;,TEXT( Dental_Product_Options__c )= &apos;PC-20 POS - basic dental services $20 per office visit with option to go OON&apos;))</errorConditionFormula>
        <errorDisplayField>Dental_Product_Options__c</errorDisplayField>
        <errorMessage>EPP024 : Dental Product Option can have this value only if the Jurisdiction field on BRF is VA/DC. Please check the Jurisdiction field on BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP026</fullName>
        <active>true</active>
        <description>Option 1: $0/$25/$45/50% w/ $75 max and $0 deductible is only valid when Jurisdiction = &quot;DC&quot; or &quot;VA&quot;</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules)  &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO&apos;)&amp;&amp; OR(TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;MD&apos;,TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;) &amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 1: $0/$25/$45/50% w/ $75 max and $0 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP026 : Option 1: $0/$25/$45/50% w/ $75 max and $0 deductible is available only for Jurisdiction VA/DC on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP027</fullName>
        <active>true</active>
        <description>Option 2: $0/$25/$45/50% w/ $75 max and $100 deductible is only valid when Jurisdiction = &quot;DC&quot; or &quot;VA&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO&apos;) &amp;&amp; OR(TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;MD&apos;,TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;)&amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 2: $0/$25/$45/50% w/ $75 max and $100 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP027 : Option 2: $0/$25/$45/50% w/ $75 max and $100 deductible is available only for Jurisdiction VA/DC on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP028</fullName>
        <active>true</active>
        <description>Option 4: $8/$15/$30 w/ $0 deductible is only valid when Jurisdiction = &quot;DC&quot; or &quot;VA&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO&apos;) &amp;&amp; OR(TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;MD&apos;,TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;)&amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 4: $8/$15/$30 w/ $0 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP028 : Option 4: $8/$15/$30 w/ $0 deductible is available only for Jurisdiction VA/DC on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP029</fullName>
        <active>true</active>
        <description>Option 7: $10/$20/$35 w/ $0 deductible is only valid when Jurisdiction = &quot;DC&quot; or &quot;VA&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO&apos;) &amp;&amp; OR(TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;MD&apos;,TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;)&amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 7: $10/$20/$35 w/ $0 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP029 : Option 7: $10/$20/$35 w/ $0 deductible is available only for Jurisdiction VA/DC on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP030</fullName>
        <active>true</active>
        <description>Option 2: $8/$15/$30 w/ $0 deductible is only valid when Jurisdiction = &quot;MD&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO&apos;) &amp;&amp; (TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;DC&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;VA&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;  ) &amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 2: $8/$15/$30 w/ $0 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP030 : Option 2: $8/$15/$30 w/ $0 deductible is available only for Jurisdiction &apos;MD&apos; on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP031</fullName>
        <active>true</active>
        <description>Option 4: $10/$20/$35 w/ $0 deductible is only valid when Jurisdiction = &quot;MD&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO&apos;) &amp;&amp; (TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;DC&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;VA&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;  ) &amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 4: $10/$20/$35 w/ $100 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP031 :Option 4: $10/$20/$35 w/ $100 deductible is available only for Jurisdiction &apos;MD&apos; on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP032</fullName>
        <active>true</active>
        <description>Option 4: $10/$20/$35 w/ $0 deductible is only valid when Jurisdiction = &quot;MD&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO&apos;) &amp;&amp; (TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;DC&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;VA&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;  ) &amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 4: $10/$20/$35 w/ $0 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP032 : Option 4: $10/$20/$35 w/ $0 deductible is available only for Jurisdiction &apos;MD&apos; on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP033</fullName>
        <active>true</active>
        <description>Option 9: $0/$25/$45/50% w/ $75 max and $100 deductible is only valid when Jurisdiction = &quot;MD&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO&apos;) &amp;&amp; (TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;DC&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;VA&apos; || TEXT( Benefit_Request_Form__r.Jurisdiction__c )=&apos;Other - Cede Required&apos;  ) &amp;&amp; TEXT(  Drug_Product_Options__c  )= &apos;Option 9: $0/$25/$45/50% w/ $75 max and $100 deductible&apos;)</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP033 : Option 9: $0/$25/$45/50% w/ $75 max and $100 deductible is available only for Jurisdiction &apos;MD&apos; on BRF. Please check the Jurisdiction of BRF</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EPP035</fullName>
        <active>true</active>
        <description>$15/$35/$60/50% w/ $100 maximum and $0 deductible&quot; is only valid when Medical Product Option is &quot;K&quot;</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND(RecordType.DeveloperName = &apos;Medical&apos;,TEXT( Medical_Product_Name__c )=&apos;BlueChoice HMO Open Access&apos;)&amp;&amp;(AND(NOT(TEXT(   Medical_Product_Option__c   )= &apos;K&apos;) , TEXT(  Drug_Product_Options__c  )=&apos;$15/$35/$60/50% w/ $100 maximum and $0 deductible&apos;)))</errorConditionFormula>
        <errorDisplayField>Drug_Product_Options__c</errorDisplayField>
        <errorMessage>EPP035 : $15/$35/$60/50% w/ $100 maximum and $0 deductible is only available when Medical Product Option is &quot;K&quot;</errorMessage>
    </validationRules>
</CustomObject>